LIMO-276: Fixed teams alignment

--- a/src/components/livescore/ls-z-fallback/_ls-z-fallback.scss
+++ b/src/components/livescore/ls-z-fallback/_ls-z-fallback.scss
@@ -84,6 +84,14 @@
       width: 100%;
       display: table-row;
       padding: 0 !important;
+
+      .cell__team--team1 {
+        text-align: right;
+      }
+
+      .cell__team--team2 {
+        text-align: left;
+      }
     }
 
     .cell {
